--- a/PhonebookApp/ClientApp/package.json
+++ b/PhonebookApp/ClientApp/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-server": "10.0.1",
     "@angular/router": "10.0.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/jquery": "^3.5.0",
+    "alertifyjs": "^1.13.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.0",
     "core-js": "^3.3.3",
