--- a/PhonebookApp/PhonebookApp.csproj
+++ b/PhonebookApp/PhonebookApp.csproj
@@ -32,6 +32,7 @@
     <None Remove="ClientApp\src\app\services\alertifyjs.service.ts" />
     <None Remove="ClientApp\src\app\services\error.interceptor.ts" />
     <None Remove="ClientApp\src\app\services\phonebook.service.ts" />
+    <None Remove="ClientApp\src\app\services\test.spec.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,9 +45,11 @@
     <TypeScriptCompile Include="ClientApp\src\app\services\error.interceptor.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\phonebook.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\phonebook.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\test.spec.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\spec\services\" />
     <Folder Include="ClientApp\src\services\" />
   </ItemGroup>
 
